# TabPFN-GSA

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: gsa_demo.py
src/tabpfn_gsa/: __init__.py  config.py  estimator.py  grid.py  model.py  tuning.py
src/tabpfn_gsa/backends/: __init__.py  base.py  functions.py  tabpfn.py
tests/: test_custom_model.py  test_estimator.py  test_runtime_info.py  test_tabpfn_wrapper.py  test_tuning.py
