[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabpfn-gsa"
version = "0.1.0"
description = "A clean extraction of the grid-based geospatial sparse attention workflow used for TabPFN-GSA."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex Workspace Extraction" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "optuna>=4.0",
  "tabpfn",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
